Archive2/b9/646e810cc48d0b/output
main.cpp:58:47: error: expected ';' before '<' token
 using arg_t = typename function_traits<T>::arg<i>::type;
                                               ^
